--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -66,11 +66,11 @@
 	<key>NSTableView Supports v2 KeyBingingTable</key>
 	<true/>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>49 310 770 429 0 0 1920 1057 </string>
+	<string>1959 326 796 473 1920 30 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>80 291 1095 577 0 0 1680 1027 </string>
+	<string>376 334 570 452 0 0 1920 1057 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>727 357 570 475 0 0 1920 1057 </string>
+	<string>2518 385 570 452 1920 30 1680 1027 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -683,6 +683,8 @@
 	<true/>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
 	<integer>0</integer>
+	<key>NoSyncPermissionToShowTip</key>
+	<false/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
 	<real>546971312.58765399</real>
 	<key>OpenBookmark</key>
@@ -735,7 +737,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2018-05-02T16:49:15Z</date>
+	<date>2018-05-22T16:46:20Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>ShowBookmarkName</key>
